# PythonRoomsApi

./: .env.example  .flake8  .pre-commit-config.yaml  .pylintrc  README.md  alembic.ini  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/data/: students.json
alembic/versions/: acafa9e5c5c2_move_is_active_column_from_profiles_.py  fd2529170436_.py
api/: courses.py  sections.py  users.py
api/config/: connection.py
api/utils/: courses.py  sections.py  users.py
database/: db_setup.py
database/migrations/: env.py
database/migrations/data/: courses.json  courses.py  sections.json  students.json
database/migrations/versions/: 24fed9555ab8_create_courses_table.py  2e0adbb52685_create_sections_table.py  415b6f64c099_create_users_table.py  4934688d3764_add_cascade_delete_on_relationships.py
database/models/: course.py  mixins.py  user.py
pydantic_schemas/: course.py  sections.py  user.py
src/: run.py
src/api/: courses.py  sections.py  users.py
src/api/utils/: courses.py  sections.py  users.py
src/data/interfaces/: courses_repository.py  sections_repository.py  users_repository.py
src/data/usecases/courses_usecases/: create_course_collector.py  create_course_collector_test.py  delete_course_collector.py  delete_course_collector_test.py  find_course_by_id_collector.py  find_course_by_id_collector_test.py  find_course_sections_collector.py  find_course_sections_collector_test.py  paginate_courses_collector.py  paginate_courses_collector_test.py  patch_course_collector.py  patch_course_collector_test.py
src/data/usecases/sections_usecases/: create_section_collector.py  create_section_collector_test.py  (+8 more)
src/database/migrations/: env.py
src/database/models/: course.py  mixins.py  user.py
src/domain/models/: course.py  sections.py
src/errors/: http_request_error.py
src/infra/config/: connection.py
src/infra/migrations/: alembic.ini  env.py
src/infra/models/: course.py  user.py
src/infra/repositories/: courses_repository.py  sections_repository.py  users.py  users_repository.py
src/main/config/: http_server_configs.py
src/main/routes/: courses_routes.py  sections_routes.py  users_routes.py
src/presenters/controllers/: __init__.py
src/presenters/errors/: error_controller.py
src/pydantic_schemas/: course.py  sections.py  user.py
(+105 files in other folders)
