[tool.poetry]
name = "pythonroomsapi"
version = "0.1.0"
description = ""
authors = ["pauloreis7 <paulosilvadosreis2057@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.2"
fastapi = "^0.78.0"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.39"
SQLAlchemy-Utils = "^0.38.2"
psycopg2-binary = "^2.9.3"
asyncpg = "^0.25.0"
alembic = "^1.8.0"

[tool.poetry.dev-dependencies]
pylint = "^2.14.4"
flake8 = "^4.0.1"
black = "^22.6.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4", "B9"]

[tool.black]
max-line-length = 100
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | alembic
)/
'''